# data-analytics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  uv-cheatsheet.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: api.md  index.md
src/data_analytics/: __init__.py  column_statistics.py
tests/: test_column_statistics.py
